--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   },
   "homepage": "https://github.com/tanvirmohammadrizvy/file-sharing-api-server#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
+    "lodash": "^4.17.21",
+    "mongoose": "^6.4.3",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.19"
   }
 }
